<resources>
    <string name="app_name">WanAndroid</string>

    <string name="hint_username">请输入用户名</string>
    <string name="hint_password">请输入密码</string>
    <string name="hint_repeat_password">请再次输入密码</string>

    <string name="btn_login">登录</string>
    <string name="btn_register">注册</string>

    <string name="bottom_nav_home">首页</string>
    <string name="bottom_nav_square">广场</string>
    <string name="bottom_nav_wechat">公众号</string>
    <string name="bottom_nav_system">体系</string>
    <string name="item_tab_system">体系</string>
    <string name="item_tab_nav">导航</string>
    <string name="bottom_nav_project">项目</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="menu_search">搜索</string>
    <string name="menu_share">分享</string>

    <string name="item_top_tip">置顶</string>
    <string name="item_the_newest">最新</string>

    <string name="go_login">请登录</string>


    <!-- Menu Action -->
    <string name="action_search">搜索</string>
    <string name="action_share">分享</string>
    <string name="action_like">收藏</string>
    <string name="action_browser">用浏览器打开</string>


    <!-- Nav Action -->
    <string name="nav_my_collect">我的收藏</string>
    <string name="nav_setting">系统设置</string>
    <string name="nav_about_us">关于我们</string>
    <string name="nav_logout">退出登录</string>
    <string name="nav_night_mode">夜间模式</string>
    <string name="nav_todo">TODO</string>
    <string name="nav_my_score">我的积分</string>
    <string name="nav_id">ID:</string>
    <string name="nav_grade">等级:</string>
    <string name="nav_rank">排名:</string>

    <string name="score">积分</string>
    <string name="score_detail">积分明细</string>
    <string name="help_label">帮助</string>
    <string name="score_list">积分排行榜</string>

    <!-- 广场 -->
    <string name="square">广场</string>
    <string name="my_share">我的分享</string>
    <string name="share_article">分享文章</string>
    <string name="share_article_title">文章标题</string>
    <string name="share_article_title_tip">100字以内</string>
    <string name="share_article_link">文章链接</string>
    <string name="share_article_link_tip">例如：https://www.wanandroid.com</string>
    <string name="share_success">分享成功</string>
    <string name="share_article_delete">已删除分享的文章</string>
    <string name="audited">待审核</string>
    <string name="submit_ing">正在提交...</string>

    <!-- AboutUs -->
    <string name="about_us">关于我们</string>
    <string name="changelog">更新日志</string>
    <string name="changelog_url">https://github.com/iceCola7/WanAndroid/releases</string>
    <string name="about_developers_label">主要开发者</string>
    <string name="about_developers">https://github.com/iceCola7</string>
    <string name="source_code">源代码</string>
    <string name="source_code_url">https://github.com/iceCola7/WanAndroid</string>
    <string name="about_libraries_label">开源许可</string>
    <string name="about_libraries_summary">查看开源许可信息</string>
    <string name="copyright">版权声明</string>
    <string name="copyright_summary">仅作个人及非商业用途</string>
    <string name="version">版本</string>
    <string name="current_version">当前版本&#160;</string>
    <string name="official_website">官方网站</string>
    <string name="official_website_url">https://www.wanandroid.com</string>

    <!-- Setting -->
    <string name="setting">设置</string>
    <string name="basic_setting">基本设置</string>
    <string name="switch_photo_mode">无图模式</string>
    <string name="switch_no_photo_mode_summary">开启后在非Wifi环境下不加载图片</string>
    <string name="switch_show_top_summary">开启后将不会显示首页置顶文章</string>
    <string name="switch_show_top_title">是否显示首页置顶文章</string>
    <string name="switch_night_mode">夜间模式</string>
    <string name="switch_night_mode_summary">切换夜间皮肤</string>
    <string name="clear_cache">清除缓存</string>
    <string name="clear_cache_successfully">清理成功</string>
    <string name="other_setting">其他设置</string>
    <string name="about_settings">关于</string>
    <string name="choose_theme_color">主题颜色</string>
    <string name="choose_theme_color_summary">自定义主题颜色</string>
    <string name="back">返回</string>
    <string name="done">完成</string>
    <string name="custom">自定义</string>
    <string name="nav_bar_coloration">导航栏着色</string>
    <string name="nav_bar_coloration_summary">导航栏颜色跟随主题颜色</string>
    <string name="choose_icon">更换图标</string>
    <string name="choose_icon_summary">重启App生效(可以将App从最近任务列表删除来重启)</string>
    <string name="slidable_title">滑动返回</string>
    <string name="slidable_summary">类似 iOS 左侧滑动返回</string>
    <string name="auto_night_mode">自动切换夜间模式</string>
    <string name="auto_night_mode_summary">设置切换的时间</string>
    <string name="auto_night_mode_subsummary">重启App生效</string>
    <string name="auto_night_category">时间</string>
    <string name="auto_night_start">夜间模式开始时间</string>
    <string name="auto_day_start">日间模式开始时间</string>
    <string name="check_version_fail">检查新版本失败，请稍后重试</string>
    <string name="check_version_ing">正在检查，请稍候...</string>
    <string name="check_no_version">当前已是最新版本了</string>
    <string name="scan_code_download">扫码下载</string>
    <string name="scan_share_tip">好用的话推荐给你的小伙伴吧</string>
    <string name="scan_code_tip">好用的话推荐给你的小伙伴吧\n（ 建议使用浏览器扫描二维码下载 ^_^ ）</string>

</resources>
