<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/bottom_nav_home" />
    <item
        android:id="@+id/nav_square"
        android:icon="@drawable/ic_square_black_24dp"
        android:title="@string/bottom_nav_square" />

    <item
        android:id="@+id/nav_wechat"
        android:icon="@drawable/ic_wechat_black_24dp"
        android:title="@string/bottom_nav_wechat" />

    <item
        android:id="@+id/nav_system"
        android:icon="@drawable/ic_apps_black_24dp"
        android:title="@string/bottom_nav_system" />

    <item
        android:id="@+id/nav_project"
        android:icon="@drawable/ic_project_black_24dp"
        android:title="@string/bottom_nav_project" />

</menu>
