<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <CheckBoxPreference
        android:defaultValue="false"
        android:key="auto_nightMode"
        android:layout="@layout/custom_preference_layout"
        android:summary="@string/auto_night_mode_subsummary"
        android:title="@string/auto_night_mode" />

    <PreferenceCategory
        android:dependency="auto_nightMode"
        android:title="@string/auto_night_category"
        app:layout="@layout/custom_preference_category_layout" />

    <Preference
        android:dependency="auto_nightMode"
        android:key="auto_night"
        android:title="@string/auto_night_start"
        app:layout="@layout/custom_preference_layout" />

    <Preference
        android:dependency="auto_nightMode"
        android:key="auto_day"
        android:title="@string/auto_day_start"
        app:layout="@layout/custom_preference_layout" />

</PreferenceScreen>