<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <View
        android:id="@+id/view_immersionbar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@android:color/white" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/xf_px_250"
        android:text="@string/app_name"
        android:textSize="@dimen/xf_px_60"
        tools:ignore="SpUsage" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/xf_px_30"
        android:layout_marginTop="@dimen/xf_px_50"
        android:layout_marginEnd="@dimen/xf_px_30">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:hint="@string/hint_username"
            android:inputType="none"
            android:maxLength="10"
            android:singleLine="true"
            android:textColor="@android:color/black"
            android:textSize="@dimen/xf_px_26"
            tools:ignore="SpUsage" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/xf_px_30"
        android:layout_marginTop="@dimen/xf_px_20"
        android:layout_marginEnd="@dimen/xf_px_30"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textColor="@android:color/black"
            android:textSize="@dimen/xf_px_26"
            tools:ignore="SpUsage" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_sign_in"
        android:layout_width="match_parent"
        android:layout_height="@dimen/xf_px_100"
        android:layout_marginStart="@dimen/xf_px_50"
        android:layout_marginTop="@dimen/xf_px_70"
        android:layout_marginEnd="@dimen/xf_px_50"
        android:enabled="false"
        android:text="@string/btn_login" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_sign_on"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="@dimen/xf_px_50"
        android:layout_marginEnd="@dimen/xf_px_40"
        android:padding="@dimen/xf_px_10"
        android:text="@string/btn_register"
        android:textColor="@android:color/black" />

</LinearLayout>
