<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?attr/selectableItemBackground"
    app:cardBackgroundColor="@color/viewBackground"
    app:cardCornerRadius="@dimen/xf_px_3"
    app:cardElevation="@dimen/xf_px_3">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/xf_px_20"
        android:paddingEnd="@dimen/xf_px_20"
        android:paddingBottom="@dimen/xf_px_20">

        <TextView
            android:id="@+id/tv_article_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/xf_px_21"
            android:background="@drawable/bg_fresh"
            android:paddingStart="@dimen/xf_px_9"
            android:paddingTop="@dimen/xf_px_5"
            android:paddingEnd="@dimen/xf_px_9"
            android:paddingBottom="@dimen/xf_px_5"
            android:text="@string/item_top_tip"
            android:textColor="@color/Red"
            android:textSize="@dimen/xf_px_21"
            android:visibility="gone"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/tv_article_fresh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_10"
            android:layout_toEndOf="@+id/tv_article_top"
            android:background="@drawable/bg_fresh"
            android:paddingStart="@dimen/xf_px_9"
            android:paddingTop="@dimen/xf_px_5"
            android:paddingEnd="@dimen/xf_px_9"
            android:paddingBottom="@dimen/xf_px_5"
            android:text="@string/item_the_newest"
            android:textColor="@color/Red"
            android:textSize="@dimen/xf_px_21"
            android:visibility="gone"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/tv_article_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_10"
            android:layout_toEndOf="@+id/tv_article_fresh"
            android:background="@drawable/bg_tag"
            android:paddingStart="@dimen/xf_px_9"
            android:paddingTop="@dimen/xf_px_5"
            android:paddingEnd="@dimen/xf_px_9"
            android:paddingBottom="@dimen/xf_px_5"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/xf_px_21"
            android:visibility="gone"
            tools:text="@string/app_name"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/tv_article_author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/tv_article_top"
            android:layout_marginStart="@dimen/dp_10"
            android:layout_toEndOf="@+id/tv_article_tag"
            android:textSize="@dimen/xf_px_21"
            tools:text="@string/app_name" />

        <TextView
            android:id="@+id/tv_article_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/tv_article_top"
            android:layout_alignParentEnd="true"
            android:textColor="@color/item_date"
            android:textSize="@dimen/xf_px_20"
            tools:text="@string/app_name" />

        <ImageView
            android:id="@+id/iv_article_thumbnail"
            android:layout_width="@dimen/xf_px_200"
            android:layout_height="@dimen/xf_px_100"
            android:layout_below="@+id/tv_article_author"
            android:layout_marginStart="@dimen/xf_px_18"
            android:layout_marginTop="@dimen/xf_px_21"
            android:scaleType="centerCrop" />

        <TextView
            android:id="@+id/tv_article_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_article_author"
            android:layout_marginStart="@dimen/xf_px_18"
            android:layout_marginTop="@dimen/xf_px_15"
            android:layout_toEndOf="@+id/iv_article_thumbnail"
            android:ellipsize="end"
            android:gravity="top|start"
            android:lineSpacingExtra="2dp"
            android:maxLines="2"
            android:paddingBottom="@dimen/xf_px_6"
            android:textColor="@color/item_title"
            android:textSize="@dimen/xf_px_25" />

        <TextView
            android:id="@+id/tv_article_chapterName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_article_title"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="@dimen/xf_px_21"
            android:layout_marginLeft="@dimen/xf_px_21"
            android:layout_marginTop="@dimen/xf_px_21"
            android:layout_marginEnd="@dimen/xf_px_21"
            android:layout_marginRight="@dimen/xf_px_21"
            android:layout_toEndOf="@+id/iv_article_thumbnail"
            android:gravity="center"
            android:textColor="@color/item_chapter"
            android:textSize="@dimen/xf_px_20"
            tools:text="@string/app_name" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_like"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_like_not" />

        </LinearLayout>

    </RelativeLayout>

</androidx.cardview.widget.CardView>